testsuite/tests/saks/should_fail/saks_fail019.stderr

saks_fail019.hs:9:1: error:
    • Couldn't match kind ‘a’ with ‘*’
      Expected: a -> *
        Actual: * -> *
      ‘a’ is a rigid type variable bound by
        the data type declaration for ‘T’
        at saks_fail019.hs:9:8
    • In the data type declaration for ‘T’
